# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("${pasteboard_tlv_path}/pasteboard_tlv.gni")

ohos_fuzztest("PasteboardDataFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file = "${pasteboard_root_path}/test/fuzztest/pasteboarddata_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-fno-omit-frame-pointer",
    "-fno-access-control",
  ]

  include_dirs = [
    "../mock/loader",
    "../mock/utils",
    "${pasteboard_framework_path}/include",
    "${pasteboard_innerkits_path}/include",
    "${pasteboard_service_path}/core/include",
    "${pasteboard_service_path}/dfx/src",
    "${pasteboard_tlv_path}",
    "${pasteboard_utils_path}/native/include",
  ]

  sources = [ "pasteboarddata_fuzzer.cpp" ]
  sources += [
    "${pasteboard_innerkits_path}/src/paste_data.cpp",
    "${pasteboard_innerkits_path}/src/paste_data_entry.cpp",
    "${pasteboard_innerkits_path}/src/paste_data_record.cpp",
    "${pasteboard_tlv_path}/tlv_readable.cpp",
    "${pasteboard_tlv_path}/tlv_utils.cpp",
    "${pasteboard_tlv_path}/tlv_writeable.cpp",
  ]

  external_deps = [
    "ability_base:zuri",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "udmf:udmf_client",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":PasteboardDataFuzzTest" ]
}
