# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

ohos_fuzztest("PasteboardDisposableFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file = "${pasteboard_root_path}/test/fuzztest/pasteboarddisposable_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-fno-access-control",
  ]

  include_dirs = [
    "${pasteboard_framework_path}/include",
    "${pasteboard_service_path}/core/include",
    "${pasteboard_service_path}/test/unittest/mock/access_token",
    "${pasteboard_utils_path}/native/include",
  ]

  sources = [
    "${pasteboard_framework_path}/ffrt/ffrt_utils.cpp",
    "${pasteboard_framework_path}/permission/permission_utils.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_disposable_manager.cpp",
    "${pasteboard_service_path}/test/unittest/mock/access_token/accesstoken_kit_virtual.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_common.cpp",
    "pasteboarddisposable_fuzzer.cpp"
  ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_innerkits_path}:pasteboard_data",
    "${pasteboard_framework_path}:pasteboard_framework",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
    "udmf:udmf_client",
    "init:libbegetutil",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":PasteboardDisposableFuzzTest" ]
}
