# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("PasteboardServiceFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file = "//foundation/distributeddatamgr/pasteboard/test/fuzztest/pasteboardservice_fuzzer"

  configs = [ "//foundation/distributeddatamgr/pasteboard/services:pasteboard_service_config" ]

  include_dirs = [
    "${pasteboard_root_path}/framework/uri",
    "${pasteboard_service_path}/zidl/include",
    "${pasteboard_service_path}/core/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${pasteboard_root_path}/framework/uri/copy_uri_handler.cpp",
    "pasteboardservice_fuzzer.cpp",
  ]

  deps = [
    "${pasteboard_framework_path}:pasteboard_framework",
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_root_path}/framework/uri:pasteboard_uri",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
    "//foundation/distributeddatamgr/pasteboard/services:pasteboard_service",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "app_file_service:remote_file_share_native",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "image_framework:image_native",
    "input:libmmi-client",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "udmf:udmf_client",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PasteboardServiceFuzzTest",
  ]
}
###############################################################################
