# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("PasteboardServiceApiFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file =
      "${pasteboard_root_path}/test/fuzztest/pasteboardserviceapi_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "pasteboardserviceapi_fuzzer.cpp",
    "${pasteboard_root_path}/test/fuzztest/mock/permission/mock_native_token.cpp",
  ]
  sources += [
    "${pasteboard_root_path}/adapter/data_share/datashare_delegate.cpp",
    "${pasteboard_root_path}/adapter/security_level/security_level.cpp",
    "${pasteboard_service_path}/account/src/account_manager.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_ability_manager.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_dialog.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_delay_manager.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_disposable_manager.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_pattern.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_service.cpp",
    "${pasteboard_service_path}/core/src/pasteboard_window_manager.cpp",
    "${pasteboard_service_path}/dfx/src/behaviour/pasteboard_behaviour_reporter_impl.cpp",
    "${pasteboard_service_path}/dfx/src/calculate_time_consuming.cpp",
    "${pasteboard_service_path}/dfx/src/command.cpp",
    "${pasteboard_service_path}/dfx/src/fault/pasteboard_fault_impl.cpp",
    "${pasteboard_service_path}/dfx/src/hiview_adapter.cpp",
    "${pasteboard_service_path}/dfx/src/pasteboard_dump_helper.cpp",
    "${pasteboard_service_path}/dfx/src/pasteboard_event_dfx.cpp",
    "${pasteboard_service_path}/dfx/src/pasteboard_trace.cpp",
    "${pasteboard_service_path}/dfx/src/reporter.cpp",
    "${pasteboard_service_path}/dfx/src/statistic/time_consuming_statistic_impl.cpp",
    "${pasteboard_service_path}/load/src/config.cpp",
    "${pasteboard_service_path}/load/src/loader.cpp",
    "${pasteboard_service_path}/switch/pasteboard_switch.cpp",
    "${pasteboard_service_path}/zidl/src/entity_recognition_observer_proxy.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_delay_getter_proxy.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_disposable_observer_proxy.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_entry_getter_proxy.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_common.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_time.cpp",
  ]

  deps = [
    "${pasteboard_framework_path}:pasteboard_framework",
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_innerkits_path}:pasteboard_data",
    "${pasteboard_service_path}:pasteboard_service_idl",
  ]

  defines = []

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:uri_permission_mgr",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libprivacy_sdk",
    "access_token:libtoken_setproc",
    "app_file_service:remote_file_share_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "dfs_service:distributed_file_daemon_kit_inner",
    "eventhandler:libeventhandler",
    "ffrt:libffrt",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "imf:inputmethod_client",
    "init:libbegetutil",
    "input:libmmi-client",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "libxml2:libxml2",
    "memmgr:memmgrclient",
    "os_account:os_account_innerkits",
    "resource_schedule_service:ressched_client",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "udmf:udmf_client",
  ]

  if (window_manager_use_sceneboard) {
    external_deps += [ "window_manager:libwm_lite" ]
    defines += [ "SCENE_BOARD_ENABLE" ]
  } else {
    external_deps += [ "window_manager:libwm" ]
  }
}

group("fuzztest") {
  testonly = true
  deps = [ ":PasteboardServiceApiFuzzTest" ]
}
