# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("UriHandlerFuzzTest") {
  module_out_path = "pasteboard/pasteboard"

  fuzz_config_file = "${pasteboard_root_path}/test/fuzztest/urihandler_fuzzer"

  include_dirs = [ "${pasteboard_root_path}/framework/uri" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${pasteboard_root_path}/framework/uri/copy_uri_handler.cpp",
    "urihandler_fuzzer.cpp",
  ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "${pasteboard_root_path}/framework/uri:pasteboard_uri",
  ]

  external_deps = [
    "ability_base:zuri",
    "app_file_service:remote_file_share_native",
    "c_utils:utils",
    "hilog:libhilog",
    "image_framework:image_native",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [ ":UriHandlerFuzzTest" ]
}
###############################################################################
