# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

group("innerkits_unittest") {
  testonly = true
  deps = [
    ":PasteboardClientTest",
    ":PasteDataTest",
    ":PasteDataEntryTest",
    ":PasteDataRecordTest",
    ":ConvertUtilsTest",
    ":PasteboardUtilsTest",
  ]
}

ohos_unittest("PasteboardClientTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/pasteboard_client_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gmock",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
  deps = [
    "${pasteboard_framework_path}:pasteboardboard_framework",
    "${pasteboard_innerkits_path}:pasteboard_client",
  ]
}

ohos_unittest("PasteDataTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/paste_data_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_data",
  ]
}

ohos_unittest("PasteDataEntryTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/paste_data_entry_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_data",
  ]
}

ohos_unittest("PasteDataRecordTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/paste_data_record_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_data",
  ]
}

ohos_unittest("ConvertUtilsTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/convert_utils_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
  ]
}

ohos_unittest("PasteboardUtilsTest") {
  module_out_path = "pasteboard/pasteboard"
  sources = [
    "unit/pasteboard_utils_test.cpp",
  ]
  configs = [ "//foundation/distributeddatamgr/pasteboard/test/unittest:unittest_config" ]
  external_deps = [
    "googletest:gtest_main",
    "hilog:libhilog",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
  ]
}
